--- a/style@.css
+++ b/style@.css
@@ -6,18 +6,58 @@ body{
     height: 80vh;
     padding: 0;
     margin: 0;
-   }
+}
 header {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    padding: 10px 20px;
+    position: fixed;
     background-color: #f0ebeb;
     width: 206vh;
     height: 90px;
     top: 0;
     border-radius: 12px;
 }
+.nav li {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+.nav a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+}
+@media (max-width: 200px) {
+    .nav li {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+    .navbar a{
+        font-size: 14px;
+        flex-direction: column;
+    }
+    .nav a {
+        margin: 10px 0;
+    }
+    .nav li a{
+        font-size: 16px;
+
+    }
+    nav{
+        width: 100%;
+    }
+    header {
+        flex-direction: column;
+        height: auto;
+        gap: 10px;
+    }
+
+}
+
 .container {
     text-align: center;  
     padding: 20px;
@@ -392,7 +432,7 @@ footer {
     margin: 20px 0;
 }
         
-@media (max-width: 768px) {
+@media (max-width: 700px) {
     .footer-main {
     flex-direction: column;
     padding: 0 20px 30px;
